<resources>
    <string name="app_name">Elvira</string>
    <string name="home_team">Home Team</string>
    <string name="vs">vs</string>
    <string name="away_team">Away Team</string>
    <string name="home_team_score">0</string>
    <string name="score_divider">-</string>
    <string name="score">Score</string>
    <string name="free_kicks">Free Kicks</string>
    <string name="goal">Goal</string>
    <string name="free_kick">Foul</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="pick_minute">Pick minute</string>
    <string name="pick_player">Pick player</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="addFreekick">Add freekick to</string>
    <string name="confirmEvent">Confirm event</string>

</resources>
